<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Main Menu Title -->
        <TextView
            android:id="@+id/mainMenuTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp" />

        <!-- New Game Button -->
        <Button
            android:id="@+id/newGameButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            app:layout_constraintTop_toBottomOf="@id/mainMenuTitleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

        <!-- Continue Game Button -->
        <Button
            android:id="@+id/continueGameButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/continue_game"
            app:layout_constraintTop_toBottomOf="@id/newGameButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

        <!-- Stats Button -->
        <Button
            android:id="@+id/leaderboardButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Leaderboard"
            app:layout_constraintTop_toBottomOf="@id/continueGameButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

        <!-- Settings Button -->
        <Button
            android:id="@+id/settingsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            app:layout_constraintTop_toBottomOf="@id/leaderboardButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
